crates/kernel/tests/table/snapshots/main__table__router__a_known_cover_side_prefetches_the_next_cover_with_the_lookahead.snap
---
source: crates/kernel/tests/table/router.rs
expression: "walked(model, messages)"
---
[
    (
        Viewport {
            visible_rows: Cells(
                10,
            ),
            cover_side: Some(
                Pixels(
                    240,
                ),
            ),
        },
        [
            Library(
                DecodeCover(
                    CoverJob {
                        path: "/tmp/track0.flac",
                        side: Pixels(
                            240,
                        ),
                    },
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 0ns,
                started_at: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Audio(
            PositionReported {
                position: 95s,
                revision: Revision(
                    0,
                ),
            },
        ),
        [
            Macos(
                SetPosition(
                    95s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 95s,
                started_at: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
    (
        Elapsed(
            Lookahead(
                Revision(
                    0,
                ),
            ),
        ),
        [
            Audio(
                Preload(
                    TrackLoad {
                        media: Local(
                            "/tmp/track1.flac",
                        ),
                        decibels: None,
                        revision: Revision(
                            2,
                        ),
                    },
                ),
            ),
            Library(
                PrefetchCover(
                    CoverJob {
                        path: "/tmp/track1.flac",
                        side: Pixels(
                            240,
                        ),
                    },
                ),
            ),
            Macos(
                SetPosition(
                    95s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 95s,
                started_at: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: Some(
                Track {
                    source: Local(
                        "/tmp/track1.flac",
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track_number: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        decibels: None,
                    },
                    display: "track1.flac",
                    tagging: Tagged(
                        100s,
                    ),
                },
            ),
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
            buffering_revision: None,
        },
        [],
    ),
]
