crates/kernel/tests/table/snapshots/main__table__router__a_manual_skip_ignores_repeat_one.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            Next,
        ),
        [
            Audio(
                Stop,
            ),
            Audio(
                Load(
                    TrackLoad {
                        path: "/tmp/track2.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Library(
                AppendHistory(
                    HistoryEntry {
                        track: Local(
                            "/tmp/track2.flac",
                        ),
                        title: "track2",
                        artist: None,
                        at: Moment(
                            0ns,
                        ),
                    },
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track2.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track2.flac",
                            tagging: Read(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading {
            track: Track {
                source: Local(
                    "/tmp/track2.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track2.flac",
                tagging: Read(
                    100s,
                ),
            },
            at: 0ns,
        },
        None,
        Cursor {
            index: 2,
            len: 3,
        },
        Cursor {
            index: 2,
            len: 3,
        },
        [],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
